--- a/react/package.json
+++ b/react/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.4",
+    "@mui/x-data-grid": "^8.13.1",
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.13",
+    "antd": "^5.27.4",
     "rc-table": "^7.53.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
