--- a/node/package.json
+++ b/node/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
+    "qrcode": "^1.5.4"
   }
 }
